[package]
name = "solana-presale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.5"
spl-token = "3.2.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "1.8.5"
solana-sdk = "1.8.5"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]